--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "type": "package",
     "require": {
-        "jenssegers/model": "^1.4",
+        "jenssegers/model": "^1.4"
     },
     "autoload": {
         "psr-4": {
