--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Cole Shirley",
-            "email": "artificerkal@gmail.com"
+            "email": "cole.shirley@artificertech.com"
         }
     ],
     "license": "MIT",
